--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://dznbk.github.io/word-memorizer",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/papaparse": "^5.3.14"
+    "@types/papaparse": "^5.3.14",
+    "gh-pages": "^6.1.1"
   }
 }
