--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -t $GH_TOKEN"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
