名称だけ一旦変更

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "えいたん",
+  "name": "英単語学習アプリ",
   "icons": [
     {
       "src": "favicon.ico",
